--- a/tips.html
+++ b/tips.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A collection of useful links for Heroes of the Storm, from beginner tips to weekly community shows.">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Useful Tips & Links for Heroes of the Storm</title>
+    <title>Useful Tips &amp; Links for Heroes of the Storm</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
           <li><a href="http://redd.it/2ty71l">Guide for new players coming to /r/heroesofthestorm</a></li>
           <li><a href="http://www.gosugamers.net/heroesofthestorm/features/4041-what-you-should-know-when-playing-heroes-of-the-storm-for-the-first-time">What to know when playing for the first time</a></li>
           <li><a href="http://www.reddit.com/r/heroesofthestorm/comments/2uoyi2/some_thoughts_on_how_to_play_objectives/">Very useful tips on each map</a></li>
-          <li><a href="http://imgur.com/a/CKYRH">Beginner Tips & Tricks imgur</a></li>
+          <li><a href="http://imgur.com/a/CKYRH">Beginner Tips &amp; Tricks imgur</a></li>
           <li><a href="http://redd.it/2jdh26">10 Tips for new players</a></li>
           <li><a href="https://www.youtube.com/watch?v=vSO8Iix6N5o">When to take Mercenary Camps</a></li>
           <li><a href="http://redd.it/2orv4m">Common Terminology for HotS</a></li>
@@ -74,8 +74,8 @@
           <li><a href="http://redd.it/2oqc91">Map related tips for beginners</a></li>
           <li><a href="http://redd.it/31n2wq">Tips for Tomb of the Spider Queen</a></li>
           <li><a href="http://team-dignitas.net/articles/blogs/Heroes-Of-The-Storm/6284/Laning-Vs-Team-Fighting-In-HOTS">Laning Vs Team Fighting</a></li>
-          <li><a href="http://imgur.com/a/IS3aL">Adavnced Tips & Tricks imgur</a></li>
-          <li><a href="http://redd.it/2tugxv">Intermediate Tips & Tricks</a></li>
+          <li><a href="http://imgur.com/a/IS3aL">Advanced Tips &amp; Tricks imgur</a></li>
+          <li><a href="http://redd.it/2tugxv">Intermediate Tips &amp; Tricks</a></li>
 
           <li><a href="http://redd.it/2qa1ji">A guide for new and experienced LoL/DotA players</a></li>
         </div>
@@ -84,11 +84,12 @@
         <div style="list-style:none">
           <li><a href="http://eu.battle.net/heroes/en/blog/">Blizzard Offical Blog</a></li>
           <li><a href="http://eu.battle.net/heroes/en/forum/topic/13605640947">Weekly Sales</a></li>
+          <li><a href="http://wiki.teamliquid.net/heroes/">Heroes of the Storm Liquipedia</a></li>
           <li><a href="http://redd.it/2tkf3d">Unannounced Hero list</a></li>
           <li><a href="http://us.battle.net/heroes/en/blog/15145471/matchmaking-design-in-heroes-of-the-storm-8-8-2014">How Matchmaking works</a></li>
           <li><a href="http://www.hero.gg/">Hero.GG - MMR/stats tracking</a></li>
           <li><a href="https://www.hotslogs.com/Default">Hotslogs.com - MMR/stats tracking</a></li>
-          <li><a href="http://hotscounters.com/">HotSCounters.com - View & share tips for heroes & maps</a></li>
+          <li><a href="http://hotscounters.com/">HotSCounters.com - View &amp; share tips for heroes &amp; maps</a></li>
           <li><a href="http://www.twitch.tv/directory/game/Heroes%20of%20the%20Storm">Twitch.TV - Heroes of the Storm Streams</a></li>
           <li><a href="http://www.reddit.com/r/heroesofthestorm/comments/2owkw6/join_us_on_irc_heroesofthestorm_quakenet/">Join us on IRC!</a>
         </div>
@@ -150,7 +151,6 @@
         }
     })
     });//]]>  
-
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
@@ -159,11 +159,9 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
