--- a/free-week-rotation/index.html
+++ b/free-week-rotation/index.html
@@ -70,6 +70,9 @@
             <div id="collapseChanges" class="panel-collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
                 <li class="list-group-item">
+                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-05-05"><strong>05 May 2015</strong></a>
+                </li>
+                <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-04-28"><strong>28 April 2015</strong></a>
                 </li>
                 <li class="list-group-item">
