forgot to sync the commit last week.....

--- a/free-week-rotation/2015-05-05.html
+++ b/free-week-rotation/2015-05-05.html
@@ -164,7 +164,7 @@
           </ul>
         </div>
 
-        <h3>Unlocked levl 12</h3>
+        <h3>Unlocked level 12</h3>
         <div class="btn-group btn-group-primary">
           <button data-toggle="dropdown" class="btn btn-danger" type="button">Chen</button>
           <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
