--- a/free-week-rotation/2015-05-19.html
+++ b/free-week-rotation/2015-05-19.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="May 12th - May 17th 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation</title>
+    <title>Free Hero Rotation (12 May 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -22,15 +22,15 @@
     <center>
       <div id="body">
         <div class="navigation list-group list-group-horizontal">
-          <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
+                <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
+                <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
         </div>
 
         
         <h1>Free Week Rotation for Heroes of the Storm</h1>
+        <h4>Note: This is an older free week rotation (<a href="http://heroesofthestorm.github.io/free-hero-rotation">Click here for this week's rotation</a>)</h4>
           <div class="btn-group btn-group-primary">
             <a class="btn btn-primary">Assassin</a>
             <a class="btn btn-success">Specialist</a>
@@ -208,149 +208,6 @@
 
         <br />
 
-        <h2>May 12th - May 19th 2015</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Block</a></li>
-            <li><a>Level 4 - Echo Pedal</a></li>
-            <li><a>Level 7 - Guitar Hero</a></li>
-            <li><a>Level 10 - Mosh Pit</a></li>
-            <li><a>Level 13 - Uber Rockstar</a></li>
-            <li><a>Level 16 - Stoneskin</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oPhPEDFDIDhAXPUAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Jaina</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Deep Chill</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Frostbitten</a></li>
-            <li><a>Level 10 - Water Elemental</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Numbing Blast</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/41-jaina#oP_NwPtN2N_O9NpAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/jaina">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Li Li</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Healing Ward</a></li>
-            <li><a>Level 7 - Shake It Off</a></li>
-            <li><a>Level 10 - Jug of 1,000 cups</a></li>
-            <li><a>Level 13 - Surging Winds</a></li>
-            <li><a>Level 16 - Two for One</a></li>
-            <li><a>Level 20 - Kung Fu Hustle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIWIpPCPcAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Sonya</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Shot of Fury</a></li>
-            <li><a>Level 4 - Furious Blow</a></li>
-            <li><a>Level 7 - Shattered Ground</a></li>
-            <li><a>Level 10 - Leap</a></li>
-            <li><a>Level 13 - Aftershock</a></li>
-            <li><a>Level 16 - Nerves of Steel</a></li>
-            <li><a>Level 20 - Hardened Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/13-sonya#JQKQPKxC_I/IDHNAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sonya">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Uther</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Protective Shield</a></li>
-            <li><a>Level 7 - Cleanse</a></li>
-            <li><a>Level 10 - Divine Storm</a></li>
-            <li><a>Level 13 - Shrink Ray</a></li>
-            <li><a>Level 16 - Benediction</a></li>
-            <li><a>Level 20 - Redemption</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/8-uther#UQPQvPTCqPEPCPIAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=YvLYWonB_A8">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/uther">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Sergeant Hammer</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Advanced Artillery</a></li>
-            <li><a>Level 4 - Maelstrom Shells</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Napalm Strike</a></li>
-            <li><a>Level 13 - Barricade</a></li>
-            <li><a>Level 16 - Hover Siege Mode</a></li>
-            <li><a>Level 20 - Advanced Lava Strike</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/17-sgt-hammer#FPnJiPdCdPoJeGRAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sergeant-hammer">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Thrall</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Rolling Thunder</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Stone Wolves</a></li>
-            <li><a>Level 10 - Sundering</a></li>
-            <li><a>Level 13 - Restless Wolves</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/43-thrall#GPtO0OnO1O_OuOrAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/thrall">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-
-
         <style type="text/css">
         .adslot-3 { display:inline-block; width:468px; height:60px; }
         @media (max-width:500px) { .adslot-3 { width:320px; height:100px } }
@@ -414,15 +271,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//heroesofthestorm.github.io/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+
     </script>
   </body>
 </html>
