idream warrior updates

--- a/idream-tierlist.html
+++ b/idream-tierlist.html
@@ -30,7 +30,7 @@
         </div>
 
         <h1>C9 iDream's Heroes of the Storm Tier List</h1>
-        <h4>Last updated May 18th 2015</h4>
+        <h4>Last updated May 20th 2015</h4>
 
         <style type="text/css">
         .adslot-1 { display:inline-block; float: inherit; width:468px; height:60px; }
@@ -272,40 +272,6 @@
               </ul>
             </div>
             <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Diablo</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a><b>C9 iDream's Talents</b></a></li>
-                <li><a>Level 1 - Devil's Due</a></li>
-                <li><a>Level 4 - Fire Devil</a></li>
-                <li><a>Level 7 - Soul Steal</a></li>
-                <li><a>Level 10 - Lightning Breath</a></li>
-                <li><a>Level 13 - Firestorm</a></li>
-                <li><a>Level 16 - Domination</a></li>
-                <li><a>Level 20 - Hellstorm</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/diablo">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">E.T.C</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a><b>C9 iDream's Talent Order</b></a></li>
-                <li><a>Level 1 - Rolling Like a Stone</a></li>
-                <li><a>Level 4 - Double-Necked Guitar</a></li>
-                <li><a>Level 7 - Just Keep Rockin'</a></li>
-                <li><a>Level 10 - Mosh Pit</a></li>
-                <li><a>Level 13 - Groupies</a></li>
-                <li><a>Level 16 - Speed Metal</a></li>
-                <li><a>Level 20 - Tour Bus</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
               <button data-toggle="dropdown" class="btn btn-primary" type="button">Anub'arak</button>
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
@@ -320,23 +286,6 @@
                 <li><a>Level 20 - Rewind</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/anubarak">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Tyrael</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a><b>C9 iDream's Talent Order</b></a></li>
-                <li><a>Level 1 - Purge Evil</a></li>
-                <li><a>Level 4 - Amplified Healing</a></li>
-                <li><a>Level 7 - Battle Momentum</a></li>
-                <li><a>Level 10 - Judgement</a></li>
-                <li><a>Level 13 - Imposing Will</a></li>
-                <li><a>Level 16 - Blood for Blood</a></li>
-                <li><a>Level 20 - Hardened Shield</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrael">Hero Information</a></li>
               </ul>
             </div>
           </div>
@@ -443,6 +392,57 @@
                 <li><a>Level 20 - Ragnarok 'n' Roll!</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/the-lost-vikings">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Diablo</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a><b>C9 iDream's Talents</b></a></li>
+                <li><a>Level 1 - Devil's Due</a></li>
+                <li><a>Level 4 - Fire Devil</a></li>
+                <li><a>Level 7 - Soul Steal</a></li>
+                <li><a>Level 10 - Lightning Breath</a></li>
+                <li><a>Level 13 - Firestorm</a></li>
+                <li><a>Level 16 - Domination</a></li>
+                <li><a>Level 20 - Hellstorm</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/diablo">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">E.T.C</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a><b>C9 iDream's Talent Order</b></a></li>
+                <li><a>Level 1 - Rolling Like a Stone</a></li>
+                <li><a>Level 4 - Double-Necked Guitar</a></li>
+                <li><a>Level 7 - Just Keep Rockin'</a></li>
+                <li><a>Level 10 - Mosh Pit</a></li>
+                <li><a>Level 13 - Groupies</a></li>
+                <li><a>Level 16 - Speed Metal</a></li>
+                <li><a>Level 20 - Tour Bus</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Tyrael</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a><b>C9 iDream's Talent Order</b></a></li>
+                <li><a>Level 1 - Purge Evil</a></li>
+                <li><a>Level 4 - Amplified Healing</a></li>
+                <li><a>Level 7 - Battle Momentum</a></li>
+                <li><a>Level 10 - Judgement</a></li>
+                <li><a>Level 13 - Imposing Will</a></li>
+                <li><a>Level 16 - Blood for Blood</a></li>
+                <li><a>Level 20 - Hardened Shield</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrael">Hero Information</a></li>
               </ul>
             </div>
           </div>
@@ -721,6 +721,9 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
+                <li class="list-group-item">
+                  <strong>20 May 2015 Tier List</strong> - ETC, Diablo, and Tyrael from t1 to t2
+                </li>
                 <li class="list-group-item">
                   <strong>18 May 2015 Tier List</strong> - Kael'Thas added along with tier changes and updated builds for 30 heroes
                 </li>
