Free week update 26th May

--- a/free-week-rotation/2015-05-26.html
+++ b/free-week-rotation/2015-05-26.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="May 26th - June 2nd 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation</title>
+    <title>Free Hero Rotation (26 May 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -22,15 +22,15 @@
     <center>
       <div id="body">
         <div class="navigation list-group list-group-horizontal">
-          <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
+                <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
+                <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
         </div>
 
         
         <h1>Free Week Rotation for Heroes of the Storm</h1>
+        <h4>Note: This is an older free week rotation (<a href="http://heroesofthestorm.github.io/free-hero-rotation">Click here for this week's rotation</a>)</h4>
           <div class="btn-group btn-group-primary">
             <a class="btn btn-primary">Assassin</a>
             <a class="btn btn-success">Specialist</a>
@@ -208,149 +208,6 @@
 
         <br />
 
-        <h2>May 19th - May 26th 2015</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Anub'arak</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Assault Scarab</a></li>
-            <li><a>Level 4 - Underking</a></li>
-            <li><a>Level 7 - Bed of Barbs</a></li>
-            <li><a>Level 10 - Locust Swarm</a></li>
-            <li><a>Level 13 - Spell Shield</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/38-anubarak#jPmPgPPNKNMNGNmAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/anubarak">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Brightwing</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Scouting Drone</a></li>
-            <li><a>Level 4 - Promote</a></li>
-            <li><a>Level 7 - Gust of Healing</a></li>
-            <li><a>Level 10 - Emerald Wind</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Critterize</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#jPIIwPnIFIEPJPaAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/brightwing">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kerrigan</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Sweeping Grasp</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Impailing Swarm</a></li>
-            <li><a>Level 10 - Maelstrom</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/12-kerrigan#oPmPwPPDtI_OvFMAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Muradin</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Reverberation</a></li>
-            <li><a>Level 4 - Thunderburn</a></li>
-            <li><a>Level 7 - Piercing Bolt</a></li>
-            <li><a>Level 10 - Avatar</a></li>
-            <li><a>Level 13 - Thunderstrike</a></li>
-            <li><a>Level 16 - Stoneform</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD6HOGMGWAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/muradin">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Raynor</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Give Me More!</a></li>
-            <li><a>Level 4 - Confident Aim</a></li>
-            <li><a>Level 7 - Revolution Overdrive</a></li>
-            <li><a>Level 10 - Raynor's Raiders</a></li>
-            <li><a>Level 13 - Double Barreled</a></li>
-            <li><a>Level 16 - Bullseye</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/3-raynor#oPWGSPCBaGPPZGDAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/raynor">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Nazeebo</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Ordder</b></a></li>
-            <li><a>Level 1 - Death Ritual</a></li>
-            <li><a>Level 4 - Spider Cluster</a></li>
-            <li><a>Level 7 - Gidbinn</a></li>
-            <li><a>Level 10 - Gargantuan</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Leaping Spiders</a></li>
-            <li><a>Level 20 - Humongoid</a></li>
-            <li class="divider"></li>          
-            <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#xHlLwPfC6OIPgCEAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>          
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">The Lost Vikings</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Viking Hoard</a></li>
-            <li><a>Level 4 - Spin to Win!</a></li>
-            <li><a>Level 7 - Jump!</a></li>
-            <li><a>Level 10 - Longboat Raid!</a></li>
-            <li><a>Level 13 - Impatience is a Virtue</a></li>
-            <li><a>Level 16 - Norse Force!</a></li>
-            <li><a>Level 20 - Ragnarok 'n' Roll!</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/45-the-lost-vikings#4P3P2PzPDQBQAQtAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/the-lost-vikings">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-
-
         <style type="text/css">
         .adslot-3 { display:inline-block; width:468px; height:60px; }
         @media (max-width:500px) { .adslot-3 { width:320px; height:100px } }
@@ -414,15 +271,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//heroesofthestorm.github.io/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+
     </script>
   </body>
 </html>
