zuna 3rd june johanna

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -323,6 +323,14 @@
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/falstad">Hero Information</a></li>
               </ul>
             </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Johanna</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
+              </ul>
+            </div>
           </div>
 
         <h2>Tier 4</h2>
@@ -483,7 +491,7 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
-                <li class="list-group-item"><strong>3 June 2015:</strong> Johanna patch, added Kael'thas to list plus a lot of tier changes</li>
+                <li class="list-group-item"><strong>3 June 2015:</strong> Added Johanna and Kael'thas to the list plus a lot of tier changes</li>
                 <li class="list-group-item"><strong>11 April 2015:</strong> Stitches & Tyrande 1→2, Diablo & Tassadar & Valla 2→1</li>
                 <li class="list-group-item"><strong>31 March 2015:</strong> Updated Builds for 14 heroes</li>
                 <li class="list-group-item"><strong>29 March 2015:</strong> Jaina & The Lost Vikings & Uther 2→1, Brightwing 3→2 Arthas 4→3</li>
